# SockNet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test-on-ubuntu18.04.yml
example/: CMakeLists.txt
example/src/: example.cpp
headers/: Client.hpp  Connector.hpp  Server.hpp
socknet/: CMakeLists.txt
socknet/include/socknet/: client.hpp  connector.hpp  connetion.hpp  endpoint.hpp  server.hpp  socknet.hpp  utilities.hpp
socknet/include/socknet/core/: connector.hpp  sockapis.hpp  utilities.hpp
socknet/src/: client.cpp  connector.cpp  endpoint.cpp  server.cpp  utilities.cpp
socknet/src/socknet/: client.cpp  connetion.cpp  server.cpp
socknet/src/socknet/core/: connector.cpp  sockapis.cpp  utilities.cpp
src/: Client.cpp  Connector.cpp  Server.cpp  main.cpp
test_socknet/: CMakeLists.txt  main.cpp
